# bofusions-geo-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bofusions_geo_mcp/: __init__.py  cli.py  client.py  parser.py  scoring.py  server.py
src/bofusions_geo_mcp/tools/: audit.py  brand_scan.py  citability.py  llmstxt.py  report.py  schema_tool.py  technical.py
